# SecureAI

./: .gitignore  .pids  ARCHITECTURE_DIAGRAMS.md  DEMO_SCRIPT.md  README.md  SETUP.md  config-backend.py  config.json  start-all.sh  test.java  view-structured-logs.sh
configuration-dashboard/: package-lock.json  package.json
configuration-dashboard/src/: App.css  App.tsx
healthcare-chat-demo/: backend.py  patient_data.json  patient_database.json  requirements.txt  start-dev.sh
healthcare-chat-demo/frontend/: .env  .env.example  .env.production  .env.sandbox  .gitignore  craco.config.js  jsconfig.json  package-lock.json  package.json
healthcare-chat-demo/frontend/public/: index.html  manifest.json
healthcare-chat-demo/frontend/src/: App.jsx  App.module.css  index.js
healthcare-chat-demo/frontend/src/components/: AnalysisResultsExample.jsx  ComprehensiveTestPage.jsx  ExportDownload.jsx  ExportOnlyTest.jsx  ExportTest.jsx  ExportTestPage.jsx  LoginForm.css  LoginForm.jsx  RoleSelector.css  RoleSelector.jsx  SimpleExportButtons.jsx  SmartChatInterface.jsx  TimeBasedGreeting.css  TimeBasedGreeting.jsx  UserProfile.css  UserProfile.jsx  index.js
healthcare-chat-demo/frontend/src/components/auth/: OAuthCallback.jsx  index.js
healthcare-chat-demo/frontend/src/components/auth/OAuthCallback/: OAuthCallback.jsx  OAuthCallback.module.css  index.js
healthcare-chat-demo/frontend/src/components/chat/: index.js
healthcare-chat-demo/frontend/src/components/chat/ChatInput/: ChatInput.jsx  ChatInput.module.css  index.js
healthcare-chat-demo/frontend/src/components/chat/LoadingIndicator/: LoadingIndicator.jsx  LoadingIndicator.module.css
healthcare-chat-demo/frontend/src/components/common/: index.js
healthcare-chat-demo/frontend/src/components/export/: index.js
healthcare-chat-demo/frontend/src/components/forms/: index.js
healthcare-chat-demo/frontend/src/components/layout/: index.js
healthcare-chat-demo/frontend/src/config/: api.config.js  api.js  app.config.js  index.js  sso.config.js  theme.config.js
healthcare-chat-demo/frontend/src/contexts/: AuthContext.js  ChatContext.js  ThemeContext.js  index.js
healthcare-chat-demo/frontend/src/hooks/: index.js  useApi.js  useAutoResize.js  useChat.js  useClickOutside.js  useExport.js  useKeyboardShortcuts.js  useLocalStorage.js  useScrollToBottom.js
healthcare-chat-demo/frontend/src/services/: chatHistoryService.js  exportService.js  index.js
healthcare-chat-demo/frontend/src/services/api/: apiClient.js  endpoints.js  index.js
healthcare-chat-demo/frontend/src/services/auth/: index.js  mockAuthService.js  ssoService.js
healthcare-chat-demo/frontend/src/services/chat/: chatService.js  index.js  messageParser.js
healthcare-chat-demo/frontend/src/services/models/: modelsService.js
healthcare-chat-demo/frontend/src/styles/: components.css  globals.css  variables.css
healthcare-chat-demo/frontend/src/styles/themes/: dark.css  light.css
healthcare-chat-demo/frontend/src/types/: api.types.js  chat.types.js  common.types.js  index.js
healthcare-chat-demo/frontend/src/utils/: constants.js  helpers.js  index.js  ringDetector.js  textFormatter.js
healthcare-chat-demo/frontend/src/utils/formatters/: dateFormatter.js  index.js  textFormatter.js
healthcare-chat-demo/frontend/src/utils/parsers/: entityParser.js  index.js  markdownParser.js
healthcare-chat-demo/frontend/src/utils/validators/: index.js  inputValidator.js
secureai-sdk/: .coverage  README.md  pyproject.toml  pytest.ini  setup.py
secureai-sdk/secureai/: __init__.py
secureai-sdk/secureai/core/: __init__.py  client.py  exceptions.py  protection.py
secureai-sdk/secureai/detection/: __init__.py  entities.py  patterns.py  pii_detector.py
secureai-sdk/secureai/encryption/: __init__.py  fpe.py  masker.py  realistic_masking.py  strategies.py
secureai-sdk/secureai/llm/: __init__.py  providers.py  secure_llm.py
secureai-sdk/secureai/logging/: __init__.py  filter.py
secureai-sdk/secureai/policy/: __init__.py  manager.py  models.py
secureai-sdk/secureai/rag/: __init__.py  faiss_store.py  protector.py  vector_db.py
secureai-sdk/tests/: __init__.py
secureai-sdk/tests/unit/: __init__.py  test_data_masker.py  test_fpe_encryptor.py  test_logging_filter.py  test_pii_detector.py  test_policy_manager.py  test_rag_protector.py  test_secure_llm.py
(+47 files in other folders)
